<resources>
    <string name="app_name">FactorDiary</string>

    <!-- Sign in page strings-->
    <string name="sign_in">Welcome to Factor Diary.</string>
    <string name="sign_up">Sign Up</string>
    <string name="disclaimer_text">By signing up, I agree to FactorDiary terms of service and Privacy Policy.</string>
    <string name="create_account">Create Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_app_id">914101742035617</string>
    <string name="close">Close</string>
    <string name="login">Log in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_2">Log In</string>
    <string name="email_label">email address</string>
    <string name="pass_label">password</string>
    <string name="pass_toggle_label_show">Show</string>
    <string name="pass_toggle_label_hide">Hide</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="acc_enter_name">What\'s your name?</string>
    <string name="acc_name_label">First name</string>
    <string name="acc_last_name_label">Last name</string>
    <string name="acc_enter_email">And, your email?</string>
    <string name="acc_enter_pass">Create a password</string>
    <string name="acc_enter_pass_desc">Your password must include at least one symbol and be 8 or more characters long.</string>
    <string name="create_sub_user_title">Pick a diary</string>
    <string name="create_sub_user_description">Choose a diary to edit, or create a new one.</string>
    <string name="forgot_pass_title">Forgot your password?</string>
    <string name="forgot_pass_desc">Enter your email to find your account.</string>

    <string name="title_activity_sub_user_account">SubUserAccountActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- SubUserAccount Tab Titles -->
    <string name="tab_history">History</string>
    <string name="tab_calendar">Calendar</string>
    <string name="tab_reminder">Reminder</string>
</resources>
